| Summary: | ASTERISK-27612: Subscriptions Persist After Expiration and TCP/TLS Disconnect | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | pjsip |
| Date Opened: | 2018-01-23 03:46:23.000-0600 | Date Closed: | 2018-02-01 11:22:32.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip_pubsub |
| Versions: | 13.19.0 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora 23 | Attachments: | |
| Description: | BLF subscription persists after Expiry reaches 0:
{noformat} Endpoint: <<ENDPOINT>>/"CALLER ID" <03455610561> Resource: <<OTHER ENDPOINT>>/dialog Expiry: 0 313531363537303339313432303931-938sotuzwa58 {noformat} When using TCP/TLS connections, these cause warning messages to be displayed: {noformat} [2018-01-23 09:43:43] WARNING[180033]: pjproject:0 <?>: tlsc0x7f666c089428 TLS connect() error: Connection refused [code=120111] [2018-01-23 09:43:43] WARNING[180033]: pjproject:0 <?>: tsx0x7f6664147df8 Failed to send Request msg NOTIFY/cseq=29928 (tdta0x7f66900173e8)! err=120111 (Connection refused) {noformat} To resolve this issue two things need to happen: 1) When an inbound subscription expires, remove the active subscription references 2) When a TCP/TLS connection disconnects, expire any active subscriptions for that connection. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-01-23 03:46:27.260-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-02-01 11:22:33.668-0600 Change 8083 merged by George Joseph: res_pjsip_pubsub: Prune subs with reliable transports at startup [https://gerrit.asterisk.org/8083|https://gerrit.asterisk.org/8083] By: Friendly Automation (friendly-automation) 2018-02-01 11:28:09.205-0600 Change 8084 merged by George Joseph: res_pjsip_pubsub: Prune subs with reliable transports at startup [https://gerrit.asterisk.org/8084|https://gerrit.asterisk.org/8084] By: Friendly Automation (friendly-automation) 2018-02-01 11:33:47.569-0600 Change 8082 merged by George Joseph: res_pjsip_pubsub: Prune subs with reliable transports at startup [https://gerrit.asterisk.org/8082|https://gerrit.asterisk.org/8082] | ||